[gd_scene load_steps=3 format=3 uid="uid://bhud01"]

[ext_resource type="Script" path="res://scenes/gui/hud.gd" id="1_hud"]
[ext_resource type="PackedScene" path="res://scenes/gui/oxygen_bar.tscn" id="2_obar"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="OxygenBar" parent="." instance=ExtResource("2_obar")]
offset_left = 8.0
offset_top = 8.0

[node name="InteractPrompt" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = -20.0
horizontal_alignment = 1
text = "Press E to connect"
visible = false

[node name="DebugInfo" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 50.0

[node name="StateLabel" type="Label" parent="DebugInfo"]
text = "State: --"

[node name="FPSLabel" type="Label" parent="DebugInfo"]
text = "FPS: --"
